--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -410,7 +410,7 @@ p {
       height: 100%;
       display: flex;
       flex-direction: column;
-      .badge {
+      .badge-img {
         display: inline-block;
         width: 50px;
         height: 50px;
@@ -909,6 +909,7 @@ p {
     color: #656b88;
     font-size: 16px;
     font-family: "Gotham Book";
+    min-height: 65vh;
     img {
       width: 20px !important;
     }
@@ -1772,6 +1773,7 @@ p {
           i {
             float: right;
             color: #fff;
+            border: none;
           }
           &:hover {
             color: #fff;
@@ -1923,6 +1925,7 @@ p {
     min-height: 110vh;
     .list {
       .item {
+        text-decoration: none;
         .content {
           p {
             cursor: pointer;
