--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1992,6 +1992,7 @@ p {
             font-weight: bold;
             font-family: "Gotham Bold";
             font-size: 16px;
+            padding-top: 7px;
           }
         }
         .privacy-section {
