--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3977,9 +3977,9 @@
     background: -webkit-gradient(linear, left top, left bottom, from(#0a1332), to(#070e29)) !important;
     background: linear-gradient(to bottom, #0a1332 0%, #070e29 100%) !important;
     z-index: +1;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.15) !important;
     position: absolute;
     width: 100%;
+    border-radius: 0;
   }
 
   .segment.mobile-navbar .logo img {
@@ -3988,47 +3988,129 @@
     margin-left: -5px !important;
   }
 
-  .segment.mobile-navbar .menu {
-    background: transparent !important;
+  .segment.mobile-navbar .mobile-register {
+    margin: 0 !important;
+    padding: 0 !important;
+    display: inline-block !important;
+    margin-left: 130px !important;
   }
 
-  .segment.mobile-navbar .menu .right.menu > .item:last-child {
-    border: 1px solid #fff;
+  .segment.mobile-navbar .mobile-register .primary-button {
+    padding: 7px;
+    font-size: 10px !important;
   }
 
-  .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition {
+  .segment.mobile-navbar .menu .dropdown.services .text {
+    padding: 10px 0px 10px 11px;
+    font-size: 12px !important;
+    font-family: "Gotham Bold";
+  }
+
+  .segment.mobile-navbar .menu.sub-menu {
+    position: initial !important;
+    margin: 0 !important;
+    padding-bottom: 10px;
+    border-radius: 0 !important;
+    border: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item {
+    background: #070e29 !important;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    border-radius: 0px;
+    padding: 5px 5px 5px 10px;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item {
+    border-radius: 50%;
+    border: 2px solid #202c5a;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item img {
+    width: 17px;
+    height: 17px;
     position: absolute;
-    top: 44px;
-    width: 100vw;
-    right: -135%;
-    background-color: rgba(255, 255, 255, 0.99) !important;
+    margin-left: 5px;
+    margin-top: 5px;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.desktop {
+    border-color: #7436e9;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.mobile {
+    border-color: #f34cb5;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.ui {
+    border-color: #f3a864;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.branding {
+    border-color: #e4cb0d;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.illustration {
+    border-color: #90ce41;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item .avatar-item.marketing {
+    border-color: #285596;
+  }
+
+  .segment.mobile-navbar .menu.sub-menu .custom-dropdown-item p {
+    font-size: 12px;
+    font-family: "Gotham Bold";
+    color: #747b96 !important;
+    padding: 7px 0px 0px 10px;
+  }
+
+  .segment.mobile-navbar .menu .right.menu {
+    margin-left: 0 !important;
+  }
+
+  .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
+    background: #070e29 !important;
+    position: absolute;
+    top: 32px;
+    width: 320px;
+    left: -287px;
     z-index: 299;
     overflow: visible;
-    -webkit-box-shadow: 5px 0 10px 2px black;
-            box-shadow: 5px 0 10px 2px black;
-    text-align: center;
+    text-align: left;
   }
 
-  .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .ui.divider {
-    margin: 0 !important;
-  }
-
-  .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .item {
-    color: #404040 !important;
+  .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition .item {
+    color: #747b96 !important;
     display: inline-block;
-    text-transform: uppercase;
-    font-size: 1.1em !important;
-    line-height: 2.5em;
-    letter-spacing: 0.2em;
+    text-transform: capitalize;
+    font-size: 12px !important;
+    width: 100%;
+    font-family: "Gotham Bold";
   }
 
-  .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .item.active {
-    border-bottom: 4px solid #00b5ad;
-    border-radius: 0;
+  .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition .item:active {
+    color: #fff !important;
+  }
+
+  .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition .item:hover {
+    color: #fff !important;
   }
 
   .page {
-    padding-top: 52px;
+    padding-top: 50px;
   }
 
   .page main .home-page .homepage-header {
